samples/errors/types/assign_parameter.lif
function foo(bar: Int) {
    bar = "Baz";
}

foo(1);
